# Wordpasser

./: Build_Wordpasser_EXE.bat  CMakeLists.txt  PushToGit.bat  Wordpasser_Test.cpp
BU/: ‏‏WordpasserBU.cpp  ‏‏WordpasserBU_WorkingGPandAP.cpp
src/: Build_Wordpasser_EXE.bat  CMakeCache.txt  What.cpp  Wordpasser.cpp  Wordpasser.h
